--- a/Greece.html
+++ b/Greece.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     
-    <a href="HolidayTime.html">
+    <a href="index.html">
         <img class="logo" src="./Images/Logo.png" alt="HolidayTime Logo" />
     </a>
 
     
     <ul class="Container">
         <!-- <li><a class="NavBar"></a></li> -->
-        <li><a class="NavBar" href="HolidayTime.html">Holiday Time</a></li>
+        <li><a class="NavBar" href="index.html">Holiday Time</a></li>
         <!-- <li><a class="NavBar"></a></li> -->
         <!-- <li><a class="NavBar"></a></li>
         <li><a class="NavBar"></a></li> -->
