--- a/aboutus.html
+++ b/aboutus.html
@@ -13,14 +13,14 @@
 
 
     <!-- Logo code  -->
-    <a href="HolidayTime.html">
+    <a href="index.html">
         <img class="logo" src="./Images/Logo.png" alt="HolidayTime Logo" />
     </a>
 
       <!-- Navigation menu -->
 
     <ul class="Container">
-        <li><a class="NavBar" href="HolidayTime.html">Holiday Time</a></li>
+        <li><a class="NavBar" href="index.html">Holiday Time</a></li>
         <li><a class="NavBar" href="Greece.html">Greece</a></li>
         <li><a class="NavBar" href="Japan.html">Japan</a></li>
         <li><a class="NavBar" href="aboutus.html">About Us</a></li>
