--- a/Greece.html
+++ b/Greece.html
@@ -9,7 +9,7 @@
 <body>
     
     <a href="index.html">
-        <img class="logo" src="./Images/Logo.png" alt="HolidayTime Logo" />
+        <img class="logo" src="./Images/logo.jpg" alt="HolidayTime Logo" />
     </a>
 
     
