--- a/aboutus.html
+++ b/aboutus.html
@@ -14,7 +14,7 @@
 
     <!-- Logo code  -->
     <a href="index.html">
-        <img class="logo" src="./Images/Logo.png" alt="HolidayTime Logo" />
+        <img class="logo" src="./Images/logo.jpg" alt="HolidayTime Logo" />
     </a>
 
       <!-- Navigation menu -->
