--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <!-- clickable Logo  to the homepage -->
     <a href="index.html">
-        <img class="logo" src="./Images/Logo.png" alt="HolidayTime Logo" />
+        <img class="logo" src="./Images/logo.jpg" alt="HolidayTime Logo" />
     </a>
 
     <!-- Navigation menu -->
