--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <img class="ImageHomepage" src="./Images/travel_agency.jpeg" width="50%" alt="Holiday Time Welcome Page"/>
     <h1 class="h1">
-        Welcome to Holiday Holiday Time
+        Welcome to Holiday Time
     </h1>
     <p class="welcomeText">So pack your bags, buckle up for an amazing journey, and let HolidayTime take you beyond the ordinary. At HolidayTime, we are not just about making travel plans—we are about creating lifelong memories. Our passion is creating customised adventures that precisely capture your unique desires and interests. Whether your dream is to soak up the vibrant culture of Japan or sunbathe under the Grecian sun, we will whisk you away to destinations that ignite your soul.</p>
 
